# mtranslate

./: .gitignore  Cargo.toml  README.md  ask.sh
.cargo/: config-release.toml  config.toml  default_config.toml
.github/workflows/: freebsd_release.yml  linux.yml  linux_windows_release.yml  macos_release.yml  scp.yml  ssh.yml
dockers/init/: dbsql1.sql
pages/public/: favicon.pn
src/: .#translate.rs  config.rs  help.rs  html_translate.rs  lib.rs  main.rs  test.rs  translate.rs
test/: ask.sh  body.html  body1.html  copy3.html  html.sh  html2.sh  html2_online.sh  test.sh  trans_html.sh
