[package]
name = "mtranslate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
uuid = { version = "*", features = ["v4", "serde"] }
sha2 = {version ="*"}
base64 = {version ="*"}
deep-translator = {version="*"}
mysql = {version ="*"}
sanitize_html = {version ="*"}
random-number = {version ="*"}
toml = {version ="*"}
homedir = {version ="*"}
kuchiki = {version ="*"}
#tl = {version ="*"}
http = {version ="*"}
hostname = {version ="*"}

[lib]
name = "libs"
path = "src/lib.rs"


